--- a/style.css
+++ b/style.css
@@ -2,12 +2,19 @@ body{
    padding: 0;
    margin: 0;
 }
+.navigation{
+
+}
+.navigation li{
+
+}
 header{
     background-image: url(./images/banner/banner3.png);
     background-size: cover;
     background-repeat: no-repeat;
     height: 110vh;
     position:relative;
+    
     
 }
 .head-area{
@@ -126,4 +133,53 @@ header{
     border: none;
     font-weight: bold;
     
+}
+                        /* footer area */
+footer{
+    background-color: black;
+    height: 450px;
+    width: auto;
+    color: white;
+    display: flex;
+}
+.footer-text{
+    padding: 100px 0 0 200px;
+    width: 400px;
+}
+.footer-text h2{
+    font-family: sans-serif;
+    font-size: 30px;
+
+}
+.footer-text p{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    opacity: 75%;
+    line-height: 16px;
+}
+.footer-icon img{
+    width: 40px;
+    margin-right: 10px;
+}
+.subscribe{
+    margin-left: 300px;
+    display: block;
+}
+.subscribe h3{
+    margin-top: 100px;
+    font-family: arial;
+    font-size: 30px;
+}
+.subscribe input{
+    padding: 15px 30px;
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+}
+.subscribe button{
+    border: none;
+    background-color: orange;
+    color: white;
+    padding: 20px 40px;
+    border-radius: 5px;
+    margin-top: 20px;
 }
