--- a/style.css
+++ b/style.css
@@ -3,10 +3,20 @@ body{
    margin: 0;
 }
 .navigation{
-
+    padding-top: 20px;
+    padding-left: 60%;
 }
 .navigation li{
+    list-style: none;
+    margin-right: 20px;
+    font-family: arial;
+    font-size: 20px;
+    border-bottom: 1px solid black;
+    text-align: center;
+}
 
+.navigation ul{
+    display: flex;    
 }
 header{
     background-image: url(./images/banner/banner3.png);
@@ -22,7 +32,7 @@ header{
     text-align: right;
     float: right;
     margin-right: 200px;
-    margin-top: 100px;
+    padding-top: 70px;
     
     
 }
@@ -134,6 +144,10 @@ header{
     font-weight: bold;
     
 }
+                    /* MEET OUR TEAM MAMBER */
+
+    
+
                         /* footer area */
 footer{
     background-color: black;
