--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ header{
 }
 
 .banner-text{
-    padding: 10px 0 0 100px;
+    padding: 1px 0 0 100px;
 }
 
 .banner-text h1{
@@ -144,10 +144,49 @@ header{
     font-weight: bold;
     
 }
-                    /* MEET OUR TEAM MAMBER */
-
+                    /* Let's Become a web-developer */
+.about-me{
+    background: rgb(2,0,36);
+    background:url(./images/css-gradint.svg), linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(104,46,13,1) 0%, rgba(121,54,9,1) 0%, rgba(214,129,29,1) 50%, rgba(0,212,255,1) 100%);
+    background-repeat: no-repeat;
+    margin: 100px 150px;
+    height: 100vh;
+    display: flex;
+    border-radius: 5px;
+    box-shadow: 7px 7px 10px 0px rgba(0,0,0,0.75)
     
-
+}
+.dream-title{
+    font-size: 50px;
+    text-align: center;
+    
+    
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.about-dreem{
+    width: 50%;
+    font-family: sans-serif;
+    padding-top: 100px;
+    padding-left: 100px;
+    font-size: 20px;
+    line-height: 20px;
+    color: rgb(0, 0, 0);
+} 
+.about-dreem h4{
+    border-top: 1px solid black;
+    padding-top: 50px;
+}
+.about-dreem h1{
+    padding-top: 70px;
+}
+.focused-on{
+    font-size: 18px;
+    font-family: arial;
+    padding-top: 70px;
+}
+.focused-on li{
+    margin-bottom: 10px;
+}
                         /* footer area */
 footer{
     background-color: black;
